src/Common/Tests/Error/Makefile.win32
# Copyright (C) 2006-2009 Daniel Prevost <dprevost@photonsoftware.org>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

# To use this makefile with VS 2008, you must change the macro defined here
# AND the macro check_PROGRAMS_DEBUG near the end of this file

include ..\Makefile.inc.Win32.2005

all: 

CLEANFILES = *~ 

check_PROGRAMS =                            \
        $(DIR_RELEASE)\AddHandlerNullDef.exe     \
        $(DIR_RELEASE)\AddHandlerNullHandler.exe \
        $(DIR_RELEASE)\AddHandlerNullName.exe    \
        $(DIR_RELEASE)\AddHandlerPass.exe        \
        $(DIR_RELEASE)\AnyErrorNullError.exe     \
        $(DIR_RELEASE)\AnyErrorPass.exe          \
        $(DIR_RELEASE)\ChainErrorNullDef.exe     \
        $(DIR_RELEASE)\ChainErrorNullHandler.exe \
        $(DIR_RELEASE)\ChainErrorInvalidSig.exe  \
        $(DIR_RELEASE)\ChainErrorNoSetError.exe  \
        $(DIR_RELEASE)\ChainErrorTooMany.exe     \
        $(DIR_RELEASE)\ChainErrorPass.exe        \
        $(DIR_RELEASE)\FiniInvalidSig.exe        \
        $(DIR_RELEASE)\FiniNullError.exe         \
        $(DIR_RELEASE)\FiniPass.exe              \
        $(DIR_RELEASE)\GetErrorInvalidSig.exe    \
        $(DIR_RELEASE)\GetErrorNullError.exe     \
        $(DIR_RELEASE)\GetErrorNullMsg.exe       \
        $(DIR_RELEASE)\GetErrorZeroLength.exe    \
        $(DIR_RELEASE)\GetLastNullError.exe      \
        $(DIR_RELEASE)\GetLastPass.exe           \
        $(DIR_RELEASE)\GetLengthNullError.exe    \
        $(DIR_RELEASE)\GetLengthPass.exe         \
        $(DIR_RELEASE)\InitNoInitDefs.exe        \
        $(DIR_RELEASE)\InitNullError.exe         \
        $(DIR_RELEASE)\InitPass.exe              \
        $(DIR_RELEASE)\SetErrorInvalidSig.exe    \
        $(DIR_RELEASE)\SetErrorInvalidValue.exe  \
        $(DIR_RELEASE)\SetErrorNullError.exe     \
        $(DIR_RELEASE)\Tests.exe                 

check_PROGRAMS_DEBUG = $(check_PROGRAMS:.\Release2005\=.\Debug2005\)

check: $(DIR_RELEASE) $(check_PROGRAMS)
	cscript RunTests.vbs --path=$(DIR_RELEASE) --dllpath=$(DLL_RELEASE) $(VBS_VERBOSE)

checkdebug: $(DIR_DEBUG) $(check_PROGRAMS_DEBUG) 
	cscript RunTests.vbs --path=$(DIR_DEBUG) --dllpath=$(DLL_DEBUG) $(VBS_VERBOSE)

clean: 
	-@erase /Q $(DIR_DEBUG)\Tests
	-@rmdir /Q $(DIR_DEBUG)\Tests
	-@erase /Q $(DIR_DEBUG)
	-@rmdir /Q $(DIR_DEBUG)
	-@erase /Q $(DIR_RELEASE)\Tests
	-@rmdir /Q $(DIR_RELEASE)\Tests
	-@erase /Q $(DIR_RELEASE)
	-@rmdir /Q $(DIR_RELEASE)
	-@erase /Q ProjectFiles\*.dep
	-@erase /Q ProjectFiles\*.plg
	-@erase /Q ProjectFiles\*.mak
	-@erase /Q $(CLEANFILES)

